# phytium-mci

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
docs/: .$fsl_sdmmc.drawio.bkp  ReadWriteExample.drawio  card类型分析.md  fsdif.drawio  fsl_sdmmc.drawio  sd_mmc_comparison_cn.md  state.drawio  state_1.8V.drawio  update log.md  飞腾派SDMMC开发.md
docs/temp/: data512.txt
src/: constants.rs  err.rs  lib.rs  mci.rs  mci_config.rs  mci_timing.rs  regs.rs  sd.rs  tools.rs
src/iopad/: constants.rs  mod.rs  regs.rs
src/mci/: constants.rs  err.rs  mci_cmd.rs  mci_cmddata.rs  mci_config.rs  mci_data.rs  mci_dma.rs  mci_hardware.rs  mci_intr.rs  mci_irq.rs  mci_pio.rs  mci_timing.rs  mod.rs  regs.rs
src/mci_bk/: mci_config.rs  mci_timing.rs  mod.rs  regs.rs
src/mci_host/: constants.rs  err.rs  mci_card_base.rs  mci_host_card.rs  mci_host_card_detect.rs  mci_host_config.rs  mci_host_device.rs  mci_host_transfer.rs  mod.rs  sdmmc.rs
src/mci_host/mci_sdif/: constants.rs  mod.rs  sdif_device.rs
src/mci_host/sd/: cid.rs  constants.rs  csd.rs  io_voltage.rs  mod.rs  scr.rs  status.rs  usr_param.rs
src/osa/: consts.rs  err.rs  mod.rs  pool_buffer.rs
tests/: example.rs  log  test.rs
