[package]
name = "phytium-mci"
version = "0.1.0"
edition = "2021"

[dependencies]
tock-registers = "0.9.0"
log = "0.4"
dma-api = { version = "0.2", features = ["alloc"] }
nb = "1.1"
bitflags = "2.8"
bytemuck = "1.22.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
rlsf = "0.2.1"

[dev-dependencies]
bare-test = "0.4"
pcie = "0.2"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
spin_on = "0.1.1"

[build-dependencies]
bare-test-macros = "0.2"

[features]
default = ["dma"]
dma = []
pio = []

[[test]]
name = "test"
harness = false
